# solcit

./: .gitignore  requirements.txt
.github/workflows/: ci.yml
backend/src/: .gitignore  api.py  requirements.txt  search_engine_indeed.py  search_engine_jooble.py
desktop/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
desktop/.svelte-kit/: ambient.d.ts  tsconfig.json
desktop/.svelte-kit/types/: route_meta_data.json
desktop/.svelte-kit/types/src/routes/: $types.d.ts
desktop/.svelte-kit/types/src/routes/coverletter/: $types.d.ts
desktop/e2e/: loading.test.ts  test.ts
desktop/src/: app.d.ts  app.pcss
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: appconfig.rs  helpers.rs  jobsearch.rs  llm.rs  main.rs  schemas.rs  server.rs
desktop/src/components/: Bettertextarea.svelte  CoverLetterLoader.svelte  Dropdown.svelte  PDFLoader.svelte  ScrollSnap.svelte  SourceIndeed.svelte  SourceJooble.svelte  index.ts
desktop/src/components/icons/: Blur.svelte
desktop/src/lib/: index.ts  jobApplication.ts  jobHistory.ts  jobIO.ts  schemas.ts
desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
desktop/src/routes/coverletter/: +page.svelte
desktop/src/routes/credentials/: +page.svelte
desktop/src/routes/cv/: +page.svelte
desktop/src/routes/stats/: +layout.ts  +page.svelte
